membetulkan filter bagian jumlah penumpang, dan menambahkan server

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="public/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <style>
         
         @media (min-width: 992px) {
@@ -140,11 +140,11 @@
         }
 
         .carousel-control-prev-icon {
-          background-image: url(public/images/landing-page-img/Left\ button.png);
+          background-image: url(images/landing-page-img/Left\ button.png);
         }
 
         .carousel-control-next-icon {
-          background-image: url(public/images/landing-page-img/Right\ button.png);
+          background-image: url(images/landing-page-img/Right\ button.png);
         }
 
         .img-rate.img-fluid {
@@ -195,7 +195,7 @@
       <div class="container">
         <header class="d-flex flex-wrap justify-content-between py-3 mb-4">
           <a href="#" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-            <img src="public/images/landing-page-img/logo.png" width= "100px" height="34px" class="d-block mt-3">
+            <img src="images/landing-page-img/logo.png" width= "100px" height="34px" class="d-block mt-3">
           </a>
     
           <ul class="nav nav-pills">
@@ -236,7 +236,7 @@
             </div>
           </div>
           <div class="col-10 col-sm-8 col-lg-6">
-            <img src="public/images/landing-page-img/img_car.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+            <img src="images/landing-page-img/img_car.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
           </div>
         </div>
       </div>
@@ -248,7 +248,7 @@
         <div class="d-flex align-items-center row">
           <div class="d-lg-flex justify-content-end col-xxl-5 col-xl-6 col-lg-6 col-12 offset-xxl-1">
             <div class="mt-12 mt-lg-0 position-relative">
-              <img src="public/images/landing-page-img/img_service.png" alt="online course" class="img-fluid rounded-4 w-100 z-1 position-relative">
+              <img src="images/landing-page-img/img_service.png" alt="online course" class="img-fluid rounded-4 w-100 z-1 position-relative">
             </div>
           </div>
           <div class="col-xxl-5 col-xl-6 col-lg-6 col-12">
@@ -257,23 +257,23 @@
                 <p class="lead mb-4">Sewa mobil di (Lokasimu) bersama Binar Car Rental jaminan harga lebih murah dibandingkan yang lain, kondisi mobil baru, serta kualitas pelayanan terbaik untuk perjalanan wisata, bisnis, wedding, meeting, dll.</p>
                 <ul class="mb-5 list-unstyled">
                   <li class="mb-2">
-                    <img src="public/images/landing-page-img/Group 53.svg" class="img-fluid" alt="...">
+                    <img src="images/landing-page-img/Group 53.svg" class="img-fluid" alt="...">
                     <span class="ms-2">Sewa Mobil Dengan Supir di Bali 12 Jam</span>
                   </li>
                   <li class="mb-2">
-                    <img src="public/images/landing-page-img/Group 53.svg" class="img-fluid" alt="...">
+                    <img src="images/landing-page-img/Group 53.svg" class="img-fluid" alt="...">
                     <span class="ms-2">Sewa Mobil Lepas Kunci di Bali 24 Jam</span>
                   </li>
                   <li class="mb-2">
-                    <img src="public/images/landing-page-img/Group 53.svg" class="img-fluid" alt="...">
+                    <img src="images/landing-page-img/Group 53.svg" class="img-fluid" alt="...">
                     <span class="ms-2">Sewa Mobil Jangka Panjang Bulanan</span>
                   </li>
                   <li class="mb-2">
-                    <img src="public/images/landing-page-img/Group 53.svg" class="img-fluid" alt="...">
+                    <img src="images/landing-page-img/Group 53.svg" class="img-fluid" alt="...">
                     <span class="ms-2">Gratis Antar - Jemput Mobil di Bandara</span>
                   </li>
                   <li class="mb-2">
-                    <img src="public/images/landing-page-img/Group 53.svg" class="img-fluid" alt="...">
+                    <img src="images/landing-page-img/Group 53.svg" class="img-fluid" alt="...">
                     <span class="ms-2">Layanan Airport Transfer / Drop In Out</span>
                   </li>
                 </ul>
@@ -290,22 +290,22 @@
         <p class="lead mb-4">Mengapa harus pilih Binar Car Rental?</p>
         <div class="why-us-row row g-4 py-5 row-cols-1 row-cols-lg-3">
           <div class="feature col border rounded-4">
-            <img src= "public/images/landing-page-img/icon_complete.png" class="d-inline-flex align-items-center justify-content-center mt-3 mb-3" width="35em" height="35em" >
+            <img src= "images/landing-page-img/icon_complete.png" class="d-inline-flex align-items-center justify-content-center mt-3 mb-3" width="35em" height="35em" >
             <h3 class="fw-bold fs-5 text-body-emphasis mb-3">Mobil Lengkap</h3>
             <p>Tersedia banyak pilihan mobil, kondisi masih baru, bersih dan terawat</p>
           </div>
           <div class="feature col border rounded-4">
-            <img src= "public/images/landing-page-img/icon_price.png" class="d-inline-flex align-items-center justify-content-center mt-3 mb-3" width="35em" height="35em" >
+            <img src= "images/landing-page-img/icon_price.png" class="d-inline-flex align-items-center justify-content-center mt-3 mb-3" width="35em" height="35em" >
             <h3 class="fw-bold fs-5 text-body-emphasis mb-3">Harga Murah</h3>
             <p>Harga murah dan bersaing, bisa bandingkan harga kami dengan rental mobil lain</p>
           </div>
           <div class="feature col border rounded-4">
-            <img src= "public/images/landing-page-img/icon_24hrs.png" class="d-inline-flex align-items-center justify-content-center mt-3 mb-3" width="35em" height="35em" >
+            <img src= "images/landing-page-img/icon_24hrs.png" class="d-inline-flex align-items-center justify-content-center mt-3 mb-3" width="35em" height="35em" >
             <h3 class="fw-bold fs-5 text-body-emphasis mb-3">Layanan 24 Jam</h3>
             <p>Siap melayani kebutuhan Anda selama 24 jam nonstop. Kami juga tersedia di akhir minggu</p>
           </div>
           <div class="feature col border rounded-4">
-            <img src= "public/images/landing-page-img/icon_professional.png" class="d-inline-flex align-items-center justify-content-center mt-3 mb-3" width="35em" height="35em" >
+            <img src= "images/landing-page-img/icon_professional.png" class="d-inline-flex align-items-center justify-content-center mt-3 mb-3" width="35em" height="35em" >
             <h3 class="fw-bold fs-5 text-body-emphasis mb-3">Sopir Profesional</h3>
             <p>Sopir yang profesional, berpengalaman, jujur, ramah dan selalu tepat waktu</p>
           </div>
@@ -327,25 +327,25 @@
         <div id="carouselExample" class="carousel slide px-4 py-5 mx-5 my-5 rounded-4">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="public/images/landing-page-img/img_photo2.png" class="img-profil d-block w-100" alt="...">
+              <img src="images/landing-page-img/img_photo2.png" class="img-profil d-block w-100" alt="...">
               <div class="desc container">
-                <img src="public/images/landing-page-img/Rate.png" class="img-rate img-fluid" alt="...">
+                <img src="images/landing-page-img/Rate.png" class="img-rate img-fluid" alt="...">
                 <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod”</p>    
                 <b>John Dee 32, Bromo</b>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="public/images/landing-page-img/img_photo2.png" class="img-profil d-block w-100" alt="...">
+              <img src="images/landing-page-img/img_photo2.png" class="img-profil d-block w-100" alt="...">
               <div class="desc container">
-                <img src="public/images/landing-page-img/Rate.png" class="img-rate img-fluid" alt="...">
+                <img src="images/landing-page-img/Rate.png" class="img-rate img-fluid" alt="...">
                 <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod”</p>    
                 <b>John Dee 32, Bromo</b>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="public/images/landing-page-img/img_photo2.png" class="img-profil d-block w-100" alt="...">
+              <img src="images/landing-page-img/img_photo2.png" class="img-profil d-block w-100" alt="...">
               <div class="desc container">
-                <img src="public/images/landing-page-img/Rate.png" class="img-rate img-fluid" alt="...">
+                <img src="images/landing-page-img/Rate.png" class="img-rate img-fluid" alt="...">
                 <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod”</p>    
                 <b>John Dee 32, Bromo</b>
               </div>
@@ -486,7 +486,7 @@
         <div class="card">
           <div class="card-body">
             Copyright Binar 2022
-            <img src="public/images/landing-page-img/logo.png" width= "100px" height="34px" class="d-block mt-3">
+            <img src="images/landing-page-img/logo.png" width= "100px" height="34px" class="d-block mt-3">
           </div>
         </div>
       </div>
@@ -494,10 +494,10 @@
 
     <script>
       document.getElementById("start-btn").onclick = function() {
-        window.location.href = "public/index.example.html"; // Ganti dengan URL tujuan
+        window.location.href = "index.example.html"; // Ganti dengan URL tujuan
         };
     </script>
-    <script src="public/scripts/display.js"></script>
-    <script src="public/scripts/bootstrap.bundle.min.js"></script>  
+    <script src="scripts/display.js"></script>
+    <script src="scripts/bootstrap.bundle.min.js"></script>  
 </body>
 </html>
